--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,17 @@
 
     <repositories>
         <repository>
-            <id>repo-spigot</id>
-            <url>http://repo.md-5.net/content/groups/public/</url>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/service/local/repositories/snapshots/content</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.7.10-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
+            <groupId>org.spigotmc</groupId>
+           <artifactId>spigot-api</artifactId>
+           <version>1.11-R0.1-SNAPSHOT</version>
+           <scope>provided</scope>
         </dependency>
     </dependencies>
 
